# CHIP8

./: CMakeLists.txt  README.md
doc/: Diplomski rad.docx  Diplomski.docx  diplomski.pptx  ~WRL2769.tmp
include/SDL2/: SDL_audio.h  SDL_cpuinfo.h  SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_metal.h  SDL_render.h  SDL_scancode.h  SDL_ttf.h  SDL_video.h
src/: Chip8CPU.cpp  Chip8CPU.h  Chip8Display.cpp  Chip8Display.h  Chip8Menu.cpp  Chip8Menu.h  main.cpp
